created sequence diagram for SPA

--- a/part0/0.5.md
+++ b/part0/0.5.md
@@ -1,17 +1,29 @@
-Title: User Goes to Single-Page App (SPA) Version of Notes App
+```mermaid
+sequenceDiagram
+    participant browser
+    participant server
 
-User->Browser: Enters URL "https://studies.cs.helsinki.fi/exampleapp/spa"
-Browser->Server: Sends GET request
-Server->Browser: Returns initial HTML, CSS, JS files
-Browser->Server: Sends request for notes data
-Server->Database/Storage: Retrieves notes data
-Database/Storage->Server: Returns notes data
-Server->Browser: Returns notes data
-Browser->Single-Page App: Initializes and renders page
-User->Single-Page App: Interacts with the app (e.g., creates, edits, deletes notes)
-Single-Page App->Server: Sends requests for app actions (e.g., create, edit, delete notes)
-Server->Database/Storage: Updates database/storage based on requests
-Database/Storage->Server: Returns confirmation/result status
-Server->Single-Page App: Returns confirmation/result status
-Single-Page App->User: Updates the user interface based on the status
-User->Single-Page App: Continues interacting with the app
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa
+    activate server
+    server-->>browser: HTML document
+    deactivate server
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/main.css
+    activate server
+    server-->>browser: the css file
+    deactivate server
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/spa.js
+    activate server
+    server-->>browser: the JavaScript file
+    deactivate server
+
+    Note right of browser: The browser starts executing the JavaScript code that fetches the JSON from the server
+
+    browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
+    activate server
+    server-->>browser: [{ "content": "SPA is evolving", "date": "2023-07-13" }, ... ]
+    deactivate server
+
+    Note right of browser: The browser executes the callback(redrawNotes) function that renders the notes
+```
