edited some code

--- a/part0/0.5.md
+++ b/part0/0.5.md
@@ -1,3 +1,4 @@
+##Single Page Application using sequence diagram
 ```mermaid
 sequenceDiagram
     participant browser
@@ -22,8 +23,9 @@ sequenceDiagram
 
     browser->>server: GET https://studies.cs.helsinki.fi/exampleapp/data.json
     activate server
-    server-->>browser: [{ "content": "SPA is evolving", "date": "2023-07-13" }, ... ]
+    server-->>browser: [{ "content": "SPA is evolving", "date": "2023-07-15" }, ... ]
     deactivate server
 
     Note right of browser: The browser executes the callback(redrawNotes) function that renders the notes
-```
+` 
+``
