--- a/part0/0.5.md
+++ b/part0/0.5.md
@@ -1,4 +1,5 @@
-##Single Page Application using sequence diagram
+#Single Page Application using sequence diagram
+
 ```mermaid
 sequenceDiagram
     participant browser
@@ -27,5 +28,6 @@ sequenceDiagram
     deactivate server
 
     Note right of browser: The browser executes the callback(redrawNotes) function that renders the notes
-` 
+`
 ``
+```
